<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">jWeather</string>
    <string name="day_label">Today, February 19</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_view_location">View Location</string>
    <string name="action_share_forecast">Share</string>

    <string name="title_activity_detail">Detailed Forecast</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_pref_location">Your home location</string>
    <string name="title_pref_units">How would you like temperature displayed?</string>

    <string name="pref_location_key">pref_location</string>
    <string name="pref_location_default">94109</string>

    <string-array name="pref_units_entries">
        <item>Fahrenheit</item>
        <item>Celsius</item>
    </string-array>
    <string-array name="pref_units_values">
        <item>imperial</item>
        <item>metric</item>
    </string-array>
    <string name="pref_units_key">pref_units</string>
    <string name="pref_units_default">imperial</string>



    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
