<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditTextPreference
        android:id="@+id/pref_edit_location"
        android:key="@string/pref_location_key"
        android:title="@string/title_pref_location"
        android:defaultValue="@string/pref_location_default"
        android:inputType="number">
    </EditTextPreference>

    <ListPreference
        android:id="@+id/pref_edit_units"
        android:key="@string/pref_units_key"
        android:title="@string/title_pref_units"
        android:summary="%s"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"
        android:defaultValue="@string/pref_units_default">
    </ListPreference>

</PreferenceScreen>